Release 1.20.5-pre4 (snapshot)