@@ -1,79 +1,84 @@
-import java.util.Map;
+import com.google.common.collect.ImmutableMap;
 import java.util.Optional;
-import java.util.function.Predicate;
-import javax.annotation.Nullable;
 
-public class bvc<E extends btx> extends bvh<E> {
-   private static final int c = 100;
-   private static final int d = 120;
-   private static final int e = 5;
-   private static final int f = 4;
-   private static final Predicate<btx> g = $$0 -> $$0.em() != null || $$0.dE() || $$0.bQ();
-   private final float h;
-   private final Predicate<E> i;
+public class bvc extends bvi<cff> {
+   private static final int c = 3;
+   private static final int d = 60;
+   private static final int e = 110;
+   private final bta<? extends cff> f;
+   private final float g;
+   private final int h;
+   private static final int i = 2;
+   private long j;
 
-   public bvc(float $$0) {
-      this($$0, g::test);
+   public bvc(bta<? extends cff> $$0) {
+      this($$0, 1.0F, 2);
    }
 
-   public bvc(float $$0, Predicate<E> $$1) {
-      super(Map.of(ccs.Z, cct.c, ccs.x, cct.c), 100, 120);
-      this.h = $$0;
-      this.i = $$1;
+   public bvc(bta<? extends cff> $$0, float $$1, int $$2) {
+      super(ImmutableMap.of(cct.h, ccu.a, cct.r, ccu.b, cct.m, ccu.c, cct.n, ccu.c, cct.Z, ccu.b), 110);
+      this.f = $$0;
+      this.g = $$1;
+      this.h = $$2;
    }
 
-   protected boolean a(are $$0, E $$1) {
-      return this.i.test($$1) && ($$1.dS().a(ccs.x) || $$1.dS().a(ccs.Z));
+   protected boolean a(arf $$0, cff $$1) {
+      return $$1.gu() && this.c($$1).isPresent();
    }
 
-   protected boolean a(are $$0, E $$1, long $$2) {
-      return true;
+   protected void a(arf $$0, cff $$1, long $$2) {
+      cff $$3 = this.c($$1).get();
+      $$1.dS().a(cct.r, $$3);
+      $$3.dS().a(cct.r, $$1);
+      bvk.a($$1, (btp)$$3, this.g, this.h);
+      int $$4 = 60 + $$1.el().a(50);
+      this.j = $$2 + (long)$$4;
    }
 
-   protected void b(are $$0, E $$1, long $$2) {
-      $$1.dS().a(ccs.Z, true);
-      $$1.dS().b(ccs.m);
-   }
-
-   protected void c(are $$0, E $$1, long $$2) {
-      buq<?> $$3 = $$1.dS();
-      $$3.b(ccs.Z);
-   }
-
-   protected void d(are $$0, E $$1, long $$2) {
-      if ($$1.K().l()) {
-         evq $$3 = this.a($$1, $$0);
-         if ($$3 != null) {
-            $$1.dS().a(ccs.m, new ccv($$3, this.h, 0));
-         }
-      }
-   }
-
-   @Nullable
-   private evq a(E $$0, are $$1) {
-      if ($$0.bQ()) {
-         Optional<evq> $$2 = this.a((dbd)$$1, $$0).map(evq::c);
-         if ($$2.isPresent()) {
-            return $$2.get();
-         }
-      }
-
-      return cem.a($$0, 5, 4);
-   }
-
-   private Optional<iz> a(dbd $$0, bst $$1) {
-      iz $$2 = $$1.dp();
-      if (!$$0.a_($$2).k($$0, $$2).c()) {
-         return Optional.empty();
+   protected boolean b(arf $$0, cff $$1, long $$2) {
+      if (!this.b($$1)) {
+         return false;
       } else {
-         Predicate<iz> $$3;
-         if (ayy.f($$1.dj()) == 2) {
-            $$3 = $$1x -> iz.a($$1x).allMatch($$1xx -> $$0.b_($$1xx).a(awu.a));
-         } else {
-            $$3 = $$1x -> $$0.b_($$1x).a(awu.a);
+         cff $$3 = this.a($$1);
+         return $$3.bD() && $$1.a($$3) && bvk.a($$1.dS(), $$3) && $$2 <= this.j && !$$1.gn() && !$$3.gn();
+      }
+   }
+
+   protected void c(arf $$0, cff $$1, long $$2) {
+      cff $$3 = this.a($$1);
+      bvk.a($$1, (btp)$$3, this.g, this.h);
+      if ($$1.a($$3, 3.0)) {
+         if ($$2 >= this.j) {
+            $$1.a($$0, $$3);
+            $$1.dS().b(cct.r);
+            $$3.dS().b(cct.r);
+         }
+      }
+   }
+
+   protected void d(arf $$0, cff $$1, long $$2) {
+      $$1.dS().b(cct.r);
+      $$1.dS().b(cct.m);
+      $$1.dS().b(cct.n);
+      this.j = 0L;
+   }
+
+   private cff a(cff $$0) {
+      return (cff)$$0.dS().c(cct.r).get();
+   }
+
+   private boolean b(cff $$0) {
+      bur<?> $$1 = $$0.dS();
+      return $$1.a(cct.r) && $$1.c(cct.r).get().ak() == this.f;
+   }
+
+   private Optional<? extends cff> c(cff $$0) {
+      return $$0.dS().c(cct.h).get().a($$1 -> {
+         if ($$1.ak() == this.f && $$1 instanceof cff $$2 && $$0.a($$2) && !$$2.gn()) {
+            return true;
          }
 
-         return iz.a($$2, 5, 1, $$3);
-      }
+         return false;
+      }).map(cff.class::cast);
    }
 }
