@@ -1,17 +1,172 @@
-import com.google.common.collect.ImmutableList;
+import java.util.List;
 
 public class sg {
-   public static final ald<eak<?, ?>> a = sh.a("end_spike");
-   public static final ald<eak<?, ?>> b = sh.a("end_gateway_return");
-   public static final ald<eak<?, ?>> c = sh.a("end_gateway_delayed");
-   public static final ald<eak<?, ?>> d = sh.a("chorus_plant");
-   public static final ald<eak<?, ?>> e = sh.a("end_island");
+   public static final ale<eal<?, ?>> a = si.a("monster_room");
+   public static final ale<eal<?, ?>> b = si.a("fossil_coal");
+   public static final ale<eal<?, ?>> c = si.a("fossil_diamonds");
+   public static final ale<eal<?, ?>> d = si.a("dripstone_cluster");
+   public static final ale<eal<?, ?>> e = si.a("large_dripstone");
+   public static final ale<eal<?, ?>> f = si.a("pointed_dripstone");
+   public static final ale<eal<?, ?>> g = si.a("underwater_magma");
+   public static final ale<eal<?, ?>> h = si.a("glow_lichen");
+   public static final ale<eal<?, ?>> i = si.a("rooted_azalea_tree");
+   public static final ale<eal<?, ?>> j = si.a("cave_vine");
+   public static final ale<eal<?, ?>> k = si.a("cave_vine_in_moss");
+   public static final ale<eal<?, ?>> l = si.a("moss_vegetation");
+   public static final ale<eal<?, ?>> m = si.a("moss_patch");
+   public static final ale<eal<?, ?>> n = si.a("moss_patch_bonemeal");
+   public static final ale<eal<?, ?>> o = si.a("dripleaf");
+   public static final ale<eal<?, ?>> p = si.a("clay_with_dripleaves");
+   public static final ale<eal<?, ?>> q = si.a("clay_pool_with_dripleaves");
+   public static final ale<eal<?, ?>> r = si.a("lush_caves_clay");
+   public static final ale<eal<?, ?>> s = si.a("moss_patch_ceiling");
+   public static final ale<eal<?, ?>> t = si.a("spore_blossom");
+   public static final ale<eal<?, ?>> u = si.a("amethyst_geode");
+   public static final ale<eal<?, ?>> v = si.a("sculk_patch_deep_dark");
+   public static final ale<eal<?, ?>> w = si.a("sculk_patch_ancient_city");
+   public static final ale<eal<?, ?>> x = si.a("sculk_vein");
 
-   public static void a(rc<eak<?, ?>> $$0) {
-      sh.a($$0, a, eax.J, new edv(false, ImmutableList.of(), null));
-      sh.a($$0, b, eax.L, eda.a(are.a, true));
-      sh.a($$0, c, eax.L, eda.a());
-      sh.a($$0, d, eax.l);
-      sh.a($$0, e, eax.K);
+   private static ji<eho> a(je $$0) {
+      return sx.a(
+         eay.w,
+         new ect(
+            List.of(
+               ect.a(new bqg(bpe.<bpz>a().a(bqf.a(0, 4), 2).a(bpw.a(0), 1).a()), efd.a(dfb.sE.o().a(dss.R, $$0))),
+               ect.a(bpw.a(1), efd.a(dfb.sD.o().a(dss.R, $$0)))
+            ),
+            je.b,
+            dzb.d,
+            true
+         )
+      );
+   }
+
+   private static ji<eho> a() {
+      return sx.a(
+         eay.S,
+         new edu(
+            new efn(
+               bpe.<dsc>a().a(dfb.sF.o().a(dme.d, je.f), 1).a(dfb.sF.o().a(dme.d, je.e), 1).a(dfb.sF.o().a(dme.d, je.c), 1).a(dfb.sF.o().a(dme.d, je.d), 1)
+            )
+         )
+      );
+   }
+
+   public static void a(rc<eal<?, ?>> $$0) {
+      jj<eal<?, ?>> $$1 = $$0.a(lq.aC);
+      jj<emi> $$2 = $$0.a(lq.aK);
+      si.a($$0, a, eay.C);
+      List<alf> $$3 = List.of(
+         new alf("fossil/spine_1"),
+         new alf("fossil/spine_2"),
+         new alf("fossil/spine_3"),
+         new alf("fossil/spine_4"),
+         new alf("fossil/skull_1"),
+         new alf("fossil/skull_2"),
+         new alf("fossil/skull_3"),
+         new alf("fossil/skull_4")
+      );
+      List<alf> $$4 = List.of(
+         new alf("fossil/spine_1_coal"),
+         new alf("fossil/spine_2_coal"),
+         new alf("fossil/spine_3_coal"),
+         new alf("fossil/spine_4_coal"),
+         new alf("fossil/skull_1_coal"),
+         new alf("fossil/skull_2_coal"),
+         new alf("fossil/skull_3_coal"),
+         new alf("fossil/skull_4_coal")
+      );
+      ji<emi> $$5 = $$2.b(rk.D);
+      si.a($$0, b, eay.p, new ebd($$3, $$4, $$5, $$2.b(rk.E), 4));
+      si.a($$0, c, eay.p, new ebd($$3, $$4, $$5, $$2.b(rk.F), 4));
+      si.a($$0, d, eay.aj, new eda(12, bqf.a(3, 6), bqf.a(2, 8), 1, 3, bqf.a(2, 4), bqe.b(0.3F, 0.7F), bpt.a(0.1F, 0.3F, 0.1F, 0.9F), 0.1F, 3, 8));
+      si.a($$0, e, eay.ak, new edf(30, bqf.a(3, 19), bqe.b(0.4F, 2.0F), 0.33F, bqe.b(0.3F, 0.9F), bqe.b(0.4F, 1.0F), bqe.b(0.0F, 0.3F), 4, 0.6F));
+      si.a(
+         $$0,
+         f,
+         eay.ag,
+         new edv(
+            jm.a(
+               sx.a(eay.al, new edl(0.2F, 0.7F, 0.5F, 0.5F), ehi.a(je.a, dzb.c(), dzb.d, 12), eht.a(bpw.a(1))),
+               sx.a(eay.al, new edl(0.2F, 0.7F, 0.5F, 0.5F), ehi.a(je.b, dzb.c(), dzb.d, 12), eht.a(bpw.a(-1)))
+            )
+         )
+      );
+      si.a($$0, g, eay.B, new eea(5, 1, 0.5F));
+      djz $$6 = (djz)dfb.fg;
+      si.a($$0, h, eay.A, new edh($$6, 20, false, true, true, 0.5F, jm.a(dez::s, dfb.b, dfb.g, dfb.e, dfb.c, dfb.su, dfb.qN, dfb.qz, dfb.sJ)));
+      si.a(
+         $$0,
+         i,
+         eay.z,
+         new eds(
+            sx.a($$1.b(sn.w)),
+            3,
+            3,
+            awp.bw,
+            efd.a(dfb.sH),
+            20,
+            100,
+            3,
+            2,
+            efd.a(dfb.sG),
+            20,
+            2,
+            dzb.a(dzb.b(dzb.c(List.of(dfb.a, dfb.nc, dfb.nb)), dzb.a(awp.cn)), dzb.a(je.a.q(), awp.ch))
+         )
+      );
+      efn $$7 = new efn(bpe.<dsc>a().a(dfb.sw.o(), 4).a(dfb.sw.o().a(dfv.r_, Boolean.valueOf(true)), 1));
+      efj $$8 = new efj(new efn(bpe.<dsc>a().a(dfb.sv.o(), 4).a(dfb.sv.o().a(dfv.r_, Boolean.valueOf(true)), 1)), dfw.e, bqf.a(23, 25));
+      si.a(
+         $$0,
+         j,
+         eay.w,
+         new ect(
+            List.of(ect.a(new bqg(bpe.<bpz>a().a(bqf.a(0, 19), 2).a(bqf.a(0, 2), 3).a(bqf.a(0, 6), 10).a()), $$7), ect.a(bpw.a(1), $$8)), je.a, dzb.c, true
+         )
+      );
+      si.a($$0, k, eay.w, new ect(List.of(ect.a(new bqg(bpe.<bpz>a().a(bqf.a(0, 3), 5).a(bqf.a(1, 7), 1).a()), $$7), ect.a(bpw.a(1), $$8)), je.a, dzb.c, true));
+      si.a($$0, l, eay.S, new edu(new efn(bpe.<dsc>a().a(dfb.sz.o(), 4).a(dfb.sy.o(), 7).a(dfb.sA.o(), 25).a(dfb.bt.o(), 50).a(dfb.iH.o(), 10))));
+      si.a($$0, m, eay.x, new eeb(awp.bu, efd.a(dfb.sC), sx.a($$1.b(l)), ehf.b, bpw.a(1), 0.0F, 5, 0.8F, bqf.a(4, 7), 0.3F));
+      si.a($$0, n, eay.x, new eeb(awp.bu, efd.a(dfb.sC), sx.a($$1.b(l)), ehf.b, bpw.a(1), 0.0F, 5, 0.6F, bqf.a(1, 2), 0.75F));
+      si.a($$0, o, eay.ag, new edv(jm.a(a(), a(je.f), a(je.e), a(je.d), a(je.c))));
+      si.a($$0, p, eay.x, new eeb(awp.bv, efd.a(dfb.dR), sx.a($$1.b(o)), ehf.b, bpw.a(3), 0.8F, 2, 0.05F, bqf.a(4, 7), 0.7F));
+      si.a($$0, q, eay.y, new eeb(awp.bv, efd.a(dfb.dR), sx.a($$1.b(o)), ehf.b, bpw.a(3), 0.8F, 5, 0.1F, bqf.a(4, 7), 0.7F));
+      si.a($$0, r, eay.ah, new edn(sx.a($$1.b(p)), sx.a($$1.b(q))));
+      si.a($$0, s, eay.x, new eeb(awp.bu, efd.a(dfb.sC), sx.a($$1.b(k)), ehf.a, bqf.a(1, 2), 0.0F, 5, 0.08F, bqf.a(4, 7), 0.3F));
+      si.a($$0, t, eay.S, new edu(efd.a(dfb.sx)));
+      si.a(
+         $$0,
+         u,
+         eay.ai,
+         new edd(
+            new dxr(
+               efd.a(dfb.a),
+               efd.a(dfb.qt),
+               efd.a(dfb.qu),
+               efd.a(dfb.qN),
+               efd.a(dfb.te),
+               List.of(dfb.qy.o(), dfb.qx.o(), dfb.qw.o(), dfb.qv.o()),
+               awp.bO,
+               awp.bQ
+            ),
+            new dxt(1.7, 2.2, 3.2, 4.2),
+            new dxs(0.95, 2.0, 2),
+            0.35,
+            0.083,
+            true,
+            bqf.a(4, 6),
+            bqf.a(3, 4),
+            bqf.a(1, 2),
+            -16,
+            16,
+            0.05,
+            1
+         )
+      );
+      si.a($$0, v, eay.am, new edt(10, 32, 64, 0, 1, bpw.a(0), 0.5F));
+      si.a($$0, w, eay.am, new edt(10, 32, 64, 0, 1, bqf.a(1, 3), 0.5F));
+      djz $$9 = (djz)dfb.qT;
+      si.a($$0, x, eay.A, new edh($$9, 20, true, true, true, 1.0F, jm.a(dez::s, dfb.b, dfb.g, dfb.e, dfb.c, dfb.su, dfb.qN, dfb.qz, dfb.sJ)));
    }
 }
